# wellnessAI

./: .gitignore  README.md  app.py  backend.py  hackathon_blood_test_2.csv  pyproject.toml  recomendation-engine.json  requirements.txt
.github/workflows/: ci_cd.yml  main_flask-app-hackathon.yml
static/css/: style.css
templates/: about.html  base.html  events.html  home.html  login.html  profile.html  register.html
