[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "health-app"
version = "0.1.0"
description = "A Flask-based Health Application"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask",
    "requests",
]

[tool.setuptools]
py-modules = ["app", "backend"]
